# deepcover

./: CMakeLists.txt  GenericHandler.cpp  GenericHandler.hpp  main.cpp  selector.cpp  selector.hpp
Extractor/: AbstractExtractor.cpp  BMPExtractor.cpp  Extractor.hpp  GenericExtractor.cpp
Handler/: BMPHandler.cpp  GenericHandler.cpp  Handler.hpp
Injector/: AbstractInjector.cpp  BMPInjector.cpp  GenericInjector.cpp  Injector.hpp
